# mixtrics

./: .gitignore  .licenserc.toml  .licenserc.yaml  .typos.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  license.yml
examples/: basic.rs
src/: lib.rs  metrics.rs  test_utils.rs  utils.rs
src/metrics.bk/: mod.rs  model.rs
src/registry/: mod.rs  noop.rs  opentelemetry_0_26.rs  opentelemetry_0_27.rs  opentelemetry_0_28.rs  opentelemetry_0_29.rs  opentelemetry_0_30.rs  opentelemetry_0_31.rs  opentelemetry_0_32.rs  prometheus.rs  prometheus_0_13.rs  prometheus_0_14.rs  prometheus_client_0_22.rs  prometheus_client_0_23.rs  prometheus_client_0_24.rs
