[package]
name = "mixtrics"
description = "One crate for all metrics."
version = "0.0.5"
edition = "2021"
repository = "https://github.com/foyer-rs/mixtrics"
homepage = "https://github.com/foyer-rs/mixtrics"
keywords = ["metric", "metrics", "prometheus", "opentelemetry", "telemetry"]
authors = ["MrCroxx <mrcroxx@outlook.com>"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
itertools = "0.14"
opentelemetry_0_26 = { package = "opentelemetry", version = "0.26", optional = true }
opentelemetry_0_27 = { package = "opentelemetry", version = "0.27", optional = true }
opentelemetry_0_28 = { package = "opentelemetry", version = "0.28", optional = true }
opentelemetry_0_29 = { package = "opentelemetry", version = "0.29", optional = true }
parking_lot = "0.12"
prometheus = { version = "0.14", optional = true }
prometheus-client_0_22 = { package = "prometheus-client", version = "0.22", optional = true }
prometheus-client_0_23 = { package = "prometheus-client", version = "0.23", optional = true }

[dev-dependencies]

[features]
default = []
prometheus = ["dep:prometheus"]
prometheus-client = ["prometheus-client_0_23"]
prometheus-client_0_23 = ["dep:prometheus-client_0_23"]
prometheus-client_0_22 = ["dep:prometheus-client_0_22"]
opentelemetry = ["opentelemetry_0_29"]
opentelemetry_0_29 = ["dep:opentelemetry_0_29"]
opentelemetry_0_28 = ["dep:opentelemetry_0_28"]
opentelemetry_0_27 = ["dep:opentelemetry_0_27"]
opentelemetry_0_26 = ["dep:opentelemetry_0_26"]
test-utils = [
    "prometheus",
    "prometheus-client",
    "prometheus-client_0_23",
    "prometheus-client_0_22",
    "opentelemetry",
    "opentelemetry_0_27",
    "opentelemetry_0_26",
]
full = ["test-utils"]

[package.metadata.docs.rs]
features = [
    "prometheus",
    "prometheus-client",
    "prometheus-client_0_22",
    "prometheus-client_0_23",
    "opentelemetry",
    "opentelemetry_0_26",
    "opentelemetry_0_27",
    "opentelemetry_0_28",
    "opentelemetry_0_29",
]
rustdoc-args = ["--cfg", "docsrs"]
