[package]
name = "mixtrics"
description = "One crate for all metrics."
version = "0.2.0"
edition = "2021"
repository = "https://github.com/foyer-rs/mixtrics"
homepage = "https://github.com/foyer-rs/mixtrics"
keywords = ["metric", "metrics", "prometheus", "opentelemetry", "telemetry"]
authors = ["MrCroxx <mrcroxx@outlook.com>"]
license = "Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
features = [
    "prometheus",
    "prometheus_0_13",
    "prometheus_0_14",
    "prometheus-client",
    "prometheus-client_0_22",
    "prometheus-client_0_23",
    "opentelemetry",
    "opentelemetry_0_26",
    "opentelemetry_0_27",
    "opentelemetry_0_28",
    "opentelemetry_0_29",
    "opentelemetry_0_30",
]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
prometheus = ["prometheus_0_14"]
prometheus_0_13 = ["dep:prometheus_0_13"]
prometheus_0_14 = ["dep:prometheus_0_14"]
prometheus-client = ["prometheus-client_0_23"]
prometheus-client_0_23 = ["dep:prometheus-client_0_23"]
prometheus-client_0_22 = ["dep:prometheus-client_0_22"]
opentelemetry = ["opentelemetry_0_30"]
opentelemetry_0_30 = ["dep:opentelemetry_0_30"]
opentelemetry_0_29 = ["dep:opentelemetry_0_29"]
opentelemetry_0_28 = ["dep:opentelemetry_0_28"]
opentelemetry_0_27 = ["dep:opentelemetry_0_27"]
opentelemetry_0_26 = ["dep:opentelemetry_0_26"]
test-utils = [
    "prometheus",
    "prometheus_0_13",
    "prometheus_0_14",
    "prometheus-client",
    "prometheus-client_0_22",
    "prometheus-client_0_23",
    "opentelemetry",
    "opentelemetry_0_26",
    "opentelemetry_0_27",
    "opentelemetry_0_28",
    "opentelemetry_0_29",
    "opentelemetry_0_30",
]
full = ["test-utils"]

[dependencies]
itertools = "0.14"
opentelemetry_0_26 = { package = "opentelemetry", version = "0.26", optional = true }
opentelemetry_0_27 = { package = "opentelemetry", version = "0.27", optional = true }
opentelemetry_0_28 = { package = "opentelemetry", version = "0.28", optional = true }
opentelemetry_0_29 = { package = "opentelemetry", version = "0.29", optional = true }
opentelemetry_0_30 = { package = "opentelemetry", version = "0.30", optional = true }
parking_lot = "0.12"
prometheus-client_0_22 = { package = "prometheus-client", version = "0.22", optional = true }
prometheus-client_0_23 = { package = "prometheus-client", version = "0.23", optional = true }
prometheus_0_13 = { package = "prometheus", version = "0.13", optional = true }
prometheus_0_14 = { package = "prometheus", version = "0.14", optional = true }

[dev-dependencies]
tempfile = "3"
